log/build_2025-06-12_20-40-53/tello_control/stderr.log
  File "/root/tello_ros_ws/install/tello_control/lib/python3.8/site-packages/tello_control/teleop_keyboard.py", line 44
    't' = 'takeoff',
        ^
SyntaxError: invalid syntax

